# beanie-starlette-admin-example

./: README.md  pyproject.toml
beanie_starlette_admin_example/: dependencies.py  main.py  models.py
scripts/: run.sh
